--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.13.2",
+    "mongoose-autopopulate": "^0.9.1",
     "simple-node-logger": "^0.93.33"
   },
   "devDependencies": {
